# ProofAgent

./: .env.example  .gitignore  AGENTS-COMMON.md  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  Dockerfile  GEMINI.md  README.md  docker-compose.hybrid-test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
chat/: index.html  package-lock.json  package.json  vite.config.ts
chat/src/: App.regression-1.test.tsx  App.test.tsx  App.tsx  router.test.tsx  router.tsx
customer/: index.html  package-lock.json  package.json  vite.config.ts
customer/src/: App.tsx
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
dashboard/src/: App.tsx  router.tsx  test-setup.ts  workflowTemplates.ts
docs/: Proof Agent - Controlled Agent Harness Framework.md  Proof Agent Engineering Review.md  Proof Agent Framework Design.md  Proof Agent PRD.md  Proof Agent Technical Plan.md  Proof Agent Test Plan.md  Proof Agent 可行性分析报告.md  Proof Agent 技术设计方案.md  Proof Agent 技术选型.md  README.md  developer-guide.md  development-progress.md  evaluation-campaign-system.md  evaluation-system.md  feasibility-analysis.md  frontend-design-principles.md  prd.md  technical-design.md
docs/adr/: 0001-knowledge-provider-contract-and-retrieval-strategy.md  0002-run-execution-api-and-observability-api-boundary.md  0003-controlled-conversation-context-for-assisted-chat.md  0004-controlled-react-workflow-and-auto-review.md  0005-llm-role-boundaries-and-harness-normalized-output.md  0006-internal-customer-handoff-events.md  0007-controlled-agent-memory-scopes.md  0007-unified-chat-frontend-with-separated-projections.md  0008-customer-persistent-user-memory.md  0009-dashboard-hosted-agent-configuration-workspace.md  0010-dashboard-sidebar-navigation-separation.md  0011-agent-configuration-module-structure.md  0012-hybrid-configuration-module-editor.md  0013-auto-save-with-manual-publish.md  0014-local-pageindex-knowledge-source-ingestion.md  0015-agentic-rag-with-retrieval-planner-and-local-tree-index.md  0016-knowledge-hub-v1-provider-set.md  (+138 more)
docs/agents/: domain.md  (+2 more)
examples/: __init__.py  demo_tools.py
proof_agent/: cli.py  contracts.py  errors.py
reports/: proofagent-release-readiness-2026-07-12.html
scripts/: check-domain-contexts.py
tests/: published_agent_support.py  test_agent_configuration_api.py  test_agent_configuration_contracts.py  test_agent_configuration_store.py  test_agent_management_insurance_specialist_example.py  test_agent_package_execution.py  test_agent_package_import.py  test_api_approvals.py  test_api_health.py  test_api_runs.py  test_api_stats.py  test_approval_resume.py  test_brave_search_tool.py  test_business_flow_skill_pack_admission.py  test_business_flow_skill_packs.py  test_citation_validator.py  test_cli.py  test_cli_regression_1.py  test_cli_regression_2.py  test_cli_regression_3.py  test_compare.py  test_composition.py  test_config_loader.py  test_context_assembler.py  test_context_budget.py  test_context_contracts.py  test_contracts.py  test_controlled_react_local_store_security.py  test_controlled_react_observation_commit.py  test_controlled_react_orchestrator.py  test_controlled_react_state_machine.py  test_conversation_api.py  test_conversation_api_regression_1.py  test_conversation_api_regression_2.py  test_customer_adapter.py  test_customer_authorization.py  test_customer_contracts.py  test_customer_handoff_projection.py  test_customer_journeys.py  test_customer_response_validator.py  (+145 more)
(+739 files in other folders)
