[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proof-agent"
version = "0.1.0"
description = "Controlled Agent Harness Framework"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "jinja2>=3.1.0",
  "langgraph>=1.1.0",
  "langchain-mcp-adapters>=0.1.0",
  "mcp[cli]>=1.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "mypy>=1.10.0", "httpx>=0.27.0"]
dashboard = ["fastapi>=0.111.0", "uvicorn>=0.30.0"]
openai = ["openai>=1.30.0"]
vector = [
  "sentence-transformers>=3.0.0",
  "chromadb>=1.5.0",
  "onnxruntime<1.26.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
tree = ["llama-index-core>=0.12.0"]
all = ["proof-agent[openai,vector,tree]"]

[project.scripts]
proof-agent = "proof_agent.delivery.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
