[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proof-agent"
version = "0.1.0"
description = "Controlled Agent Harness Framework"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "jinja2>=3.1.0",
  "mcp[cli]>=1.27.0",
  "filelock>=3.29.0,<4",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "mypy>=1.10.0", "httpx>=0.27.0"]
dashboard = ["fastapi>=0.111.0", "uvicorn>=0.30.0"]
openai = ["openai>=1.30.0"]
tree = ["llama-index-core>=0.12.0"]
ingestion = ["pypdf>=6.12.2,<7"]
all = ["proof-agent[ingestion,openai,tree]"]

[project.scripts]
proof-agent = "proof_agent.delivery.cli:main"

[tool.hatch.build.targets.wheel.force-include]
"examples/agent_management_insurance_specialist" = "examples/agent_management_insurance_specialist"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
markers = [
  "llm_regression: opt-in tests that call a real LLM provider and are skipped unless explicitly enabled",
]
